Changes Committed Related to Integer Instantiation Rule in Sonar
git-svn-id: http://192.168.110.32/svn/Products/PFF/Base/Trunk@49278 6963f9ea-81fa-44da-aa10-7ebde50aa541